use URI instead of URL in URLSource
Change-Id: I10e9a726f1829245c59c720d0b2210a9b4629cca
Reviewed-on: http://gerrit.esdi-community.eu/1248
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>